--- a/src/style/adoption_post.css
+++ b/src/style/adoption_post.css
@@ -297,7 +297,22 @@ span.proposal_buttons button.refuse_proposal:hover {
     background-color: #ffcccb;
 }
 
+.Edit-post{
+    text-align: center;
+    height: 1.4em !important;
+}
+
+form#edit-post div#postHead{
+    text-align: center;
+    padding: 1em;
+}
+
+form#edit-post div#top{
+    text-align: center;
+    padding: 1em;
+}
 
 
-
-
+form#edit-post{
+    text-align: center;
+}
